--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TASK-9</title>
     <link rel="stylesheet" href="google_styles.css">
-    <link rel="icon" href="google_icon.png">
+    <link rel="shortcut icon" href="google_icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 <body>
