--- a/index.html
+++ b/index.html
@@ -21,36 +21,46 @@
                 </form>
             </div>
             <div class="fav-list">
-                <div class="box">
-                    <i class="fa-solid fa-ellipsis-vertical dot"></i>
-                    <img src="insta.png">
-                    <p>Instagram</p>
-                </div>
-                <div class="box">
-                    <i class="fa-solid fa-ellipsis-vertical dot"></i>
-                    <img src="chatgpt.png">
-                    <p>ChatGPT</p>
-                </div>
-                <div class="box">
-                    <i class="fa-solid fa-ellipsis-vertical dot"></i>
-                    <img src="snapchat.png">
-                    <p>Snapchat</p> 
-                </div>
-                <div class="box">
-                    <i class="fa-solid fa-ellipsis-vertical dot"></i>
-                    <img src="linkedin.png">
-                    <p>LinkedIn</p>
-                </div>
-                <div class="box">
-                    <i class="fa-solid fa-ellipsis-vertical dot"></i>
-                    <img src="gemini.png">
-                    <p>Gemini</p>
-                </div>
+                <a href="https://www.instagram.com/" target="_blank">
+                    <div class="box">
+                        <i class="fa-solid fa-ellipsis-vertical dot"></i>
+                        <img src="insta.png">
+                        <p>Instagram</p>
+                    </div>
+                </a>
+                <a href="https://chatgpt.com/" target="_blank">
+                    <div class="box">
+                        <i class="fa-solid fa-ellipsis-vertical dot"></i>
+                        <img src="chatgpt.png">
+                        <p>ChatGPT</p>
+                    </div>
+                </a>
+                <a href="https://www.snapchat.com/?original_referrer=none" target="_blank">
+                    <div class="box">
+                        <i class="fa-solid fa-ellipsis-vertical dot"></i>
+                        <img src="snapchat.png">
+                        <p>Snapchat</p> 
+                    </div>
+                </a>
+                <a href="https://www.linkedin.com/" target="_blank">
+                    <div class="box">
+                        <i class="fa-solid fa-ellipsis-vertical dot"></i>
+                        <img src="linkedin.png">
+                        <p>LinkedIn</p>
+                    </div>
+                </a>
+                <a href="https://gemini.google.com/" target="_blank">
+                    <div class="box">
+                        <i class="fa-solid fa-ellipsis-vertical dot"></i>
+                        <img src="gemini.png">
+                        <p>Gemini</p>
+                    </div>
+                </a>
             </div>
     </div>
     <div class="right">
-        <a href="#">Gmail</a>
-        <a href="#">Images</a>
+        <a href="https://mail.google.com/">Gmail</a>
+        <a href="https://www.google.com/imghp?hl=en-GB&tab=ri&authuser=0&ogbl">Images</a>
         <i class="fa-solid fa-ellipsis-vertical"></i>
         <i class="fa-solid fa-ellipsis-vertical"></i>
         <i class="fa-solid fa-ellipsis-vertical"></i>
